force-app/main/default/objects/Account__b/Account__b.object-meta.xml
<CustomObject>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>