force-app/main/default/objects/Account__b/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <label>AccountSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>